--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "This is my site title."
 title_separator          : "-"
 name                     : "Your Name"
 description              : "An amazing website."
