--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 locale                   : "en-US"
 title                    : "This is my site title."
 title_separator          : "-"
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "Hal Lesesne"
+description              : "If someone starts calling you a resource, start calling them overhead..."
 url                      : "https://hlesesne.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/minimal-mistakes"# the subpath of your site, e.g. "/blog"
 gh_repo                  :
