--- a/_config.yml
+++ b/_config.yml
@@ -63,8 +63,8 @@ google_ad_slot           :
 author:
   name             : "Your Name"
   avatar           : "bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
+  bio              : "If someone starts calling you a resource, start calling them overhead."
+  location         : "North Carolina"
   email            :
   uri              :
   bitbucket        :
