--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ google_ad_slot           :
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Hal Lesesne"
   avatar           : "bio-photo.jpg"
   bio              : "If someone starts calling you a resource, start calling them overhead."
   location         : "North Carolina"
